<?xml version="1.0"?>
<package format="2">
  <name>godot_ros_pcviz</name>
  <version>0.0.0</version>
  <description>The godot_ros_pcviz package</description>
  <maintainer email="world.applepie@gmail.com">ymd-stella</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_eigen</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_sensor_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <export>
  </export>
</package>
